// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> Spec Snapshots should render a extra large heading 1`] = `
.c0 {
  display: block;
  font-size: 18px;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 30px;
  color: #504c57;
}

<div>
  <div
    class="c0"
  >
    Extra Large Heading
  </div>
</div>
`;

exports[`<Heading /> Spec Snapshots should render a large heading 1`] = `
.c0 {
  display: block;
  font-size: 16px;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 20px;
  color: #504c57;
}

<div>
  <div
    class="c0"
  >
    Large Heading
  </div>
</div>
`;

exports[`<Heading /> Spec Snapshots should render a medium heading 1`] = `
.c0 {
  display: block;
  font-size: 14px;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 16px;
  color: #504c57;
}

<div>
  <div
    class="c0"
  >
    Medium Heading
  </div>
</div>
`;

exports[`<Heading /> Spec Snapshots should render a small heading 1`] = `
.c0 {
  display: block;
  font-size: 13px;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 16px;
  color: #504c57;
}

<div>
  <div
    class="c0"
  >
    Small Heading
  </div>
</div>
`;
